# blog-api

./: README.md  db.sqlite3  pyproject.toml
blog/accounts/: admin.py  models.py
blog/accounts/migrations/: 0001_initial.py
blog/posts/: conftest.py  models.py  urls.py
blog/posts/api/: serializers.py  views.py
blog/posts/migrations/: 0001_initial.py
blog/posts/tests/: test_posts_models.py  test_posts_views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
hellodjango/: settings.py  urls.py
homepage/: views.py
products/: models.py
products/migrations/: 0001_initial.py
